# Ramanujan-Dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: chapter_topics.json  schema.json  train.jsonl
docs/: CONVENTIONS.md  ISSUES.md
ramanujan_dataset/: __init__.py  load.py  schema.py  validate.py
scripts/: build_train.py  extract_entries.py  extract_entries_rln.py  extract_ocr_drafts.py  extract_ocr_drafts_rln.py  extract_pdf.py  extract_pdf_rln.py  filter_rln_entry_only.py  jsonl_to_module.py  jsonl_to_module_rln.py  preview_html.py  push_to_hub.py
scripts/entries/: __init__.py  p1_ch01.py  p1_ch02.py  p1_ch03.py  p1_ch04.py  p1_ch05.py  p1_ch06.py  p1_ch07.py  p1_ch08.py  p1_ch09.py  p2_ch10.py  p2_ch11.py  p2_ch12.py  p2_ch13.py  p2_ch14.py  p2_ch15.py  p3_ch16.py  p3_ch17.py  p3_ch18.py  p3_ch19.py  p3_ch20.py  p3_ch21.py  p4_ch22.py  p4_ch23.py  p4_ch24.py  p4_ch25.py  p4_ch26.py  p4_ch27.py  p4_ch28.py  p4_ch29.py  p4_ch30.py  p4_ch31.py  p5_ch32.py  p5_ch33.py  p5_ch34.py  p5_ch35.py  p5_ch36.py  p5_ch37.py  p5_ch38.py  p5_ch39.py  (+81 more)
