[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ramanujan-dataset"
version = "0.0.1"
description = "A structured dataset of Srinivasa Ramanujan's mathematical formulae"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Xiang CHEN" }]
keywords = ["ramanujan", "mathematics", "formulae", "dataset"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
dev = ["jsonschema>=4.0"]
hf = ["datasets>=2.14", "huggingface_hub>=0.20"]
all = ["jsonschema>=4.0", "datasets>=2.14", "huggingface_hub>=0.20"]

[project.urls]
Homepage = "https://github.com/xiangchen/Ramanujan-Dataset"
Repository = "https://github.com/xiangchen/Ramanujan-Dataset"

[tool.setuptools.packages.find]
include = ["ramanujan_dataset*"]
